--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -30,7 +30,7 @@ Depending on the operating system used, some minimum system requirements need to
 
 Windows::
 * Windows 8 or later
-** x86-64 with 64-bit
+** with 64-bit
 ** For xref:vfs.adoc[VFS support], Windows 10 versions 1709 or later.
 
 macOS::
