[3.2] [PR 377] Move and update the description attribute to the correct place
Backport of PR #377

--- a/modules/ROOT/pages/advanced_usage/configuration_file.adoc
+++ b/modules/ROOT/pages/advanced_usage/configuration_file.adoc
@@ -1,10 +1,12 @@
 = Configuration File
-:toc:
+:toc: right
+:description: The ownCloud Desktop App uses a configuration file. It has several sections for particular settings. You will find more sections in the configuration file than described here.
+
 :ini-file-format-url: https://en.wikipedia.org/wiki/INI_file
 
 == Introduction
 
-The ownCloud Desktop App uses a configuration file. It has several sections for particular settings. You will find more sections in the configuration file than described here. Do not change any of those settings except support advises you to do so. 
+{description} Do not change any of those settings except support advises you to do so. 
 
 == Location of the Configuration File
  
