--- a/modules/ROOT/pages/advanced_usage/low_disk_space.adoc
+++ b/modules/ROOT/pages/advanced_usage/low_disk_space.adoc
@@ -1,9 +1,10 @@
 = Low Disk Space
 :toc: right
+:description: When disk space is low, the ownCloud Desktop App will be unable to synchronize all files. This section describes its behavior in a low disk space situation as well as the adjustable environment variables that influence it.
 
 == Introduction
 
-When disk space is low, the ownCloud Desktop App will be unable to synchronize all files. This section describes its behavior in a low disk space situation as well as the adjustable environment variables that influence it.
+{description}
 
 == Cases
 
