--- a/modules/ROOT/pages/filenames.adoc
+++ b/modules/ROOT/pages/filenames.adoc
@@ -1,10 +1,12 @@
 = Filename Considerations
 :toc: right
+:description: When using the Desktop App, depending on the operating system (OS) you are using, file and folder names can have different restrictions.
+
 :control_code_chart-url: https://en.wikipedia.org/wiki/ASCII#Control_code_chart
 
 == Introduction
 
-When using the Desktop App, depending on the operating system (OS) you are using, file and folder names can have different restrictions. Creating files and folders with allowed names on one OS, may have issues or even can´t be synced because of different rules in another OS. This page gives you a brief overview of limitations of different OS for file and folder names.
+{description} Creating files and folders with allowed names on one OS, may have issues or even can´t be synced because of different rules in another OS. This page gives you a brief overview of limitations of different OS for file and folder names.
 
 NOTE: This is not an ownCloud rule but an OS dependency
 
