--- a/modules/ROOT/pages/advanced_usage/command_line_client.adoc
+++ b/modules/ROOT/pages/advanced_usage/command_line_client.adoc
@@ -1,10 +1,11 @@
 = The Command Line Client
 :toc: right
+:description: The ownCloud Client packages contain a command line client, owncloudcmd, that can be used to synchronize ownCloud files to client machines.
 :page-aliases: advanced_usage/command_line_options.adoc
 
 == Introduction
 
-The ownCloud Client packages contain a command line client, `owncloudcmd`, that can be used to synchronize ownCloud files to client machines.
+{description}
 
 == Command Description
 
