--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -1,6 +1,8 @@
 = Installing the Desktop App
 :toc: right
 :toclevels: 4
+:description: The Desktop App enables users to access and sync files and folders from their ownCloud, work on remote files right from the desktop as if they were stored on their computer – because they are.
+
 :ms-remove-url: https://docs.microsoft.com/en-us/windows/win32/msi/remove
 :ms-adddefault-url: https://docs.microsoft.com/en-us/windows/win32/msi/adddefault
 :desktop-clients-url: https://owncloud.com/desktop-app/
@@ -13,12 +15,11 @@
 :gnome-extensions-url: https://extensions.gnome.org/extension/615/appindicator-support/
 :appimagelauncher-url: https://docs.appimage.org/introduction/software-overview.html#ref-appimagelauncher
 :install-appimagelauncher-url: https://github.com/TheAssassin/AppImageLauncher/wiki
-:description: The Desktop App enables users to access and sync files and folders from their ownCloud, work on remote files right from the desktop as if they were stored on their computer – because they are. Continuous synchronization to and from the ownCloud server provides ease of use combined with comprehensive access control.
 :install-shell-integration-url: https://github.com/owncloud/client-desktop-install-shell-integration
 
 == Introduction
 
-{description}
+{description} Continuous synchronization to and from the ownCloud server provides ease of use combined with comprehensive access control.
 
 == System Requirements and Installation
 
