--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -9,10 +9,11 @@
 * xref:removing.adoc[Removing the Desktop App]
 * xref:faq.adoc[FAQ]
 * xref:advanced_usage/index.adoc[Advanced Usage]
-** xref:advanced_usage/command_line_client.adoc[The Command Line Client]
+** xref:advanced_usage/command_line_parameters.adoc[Command Line Parameters]
 ** xref:advanced_usage/configuration_file.adoc[Configuration File]
 ** xref:advanced_usage/environment_variables.adoc[Environment Variables]
 ** xref:advanced_usage/low_disk_space.adoc[Low Disk Space]
+** xref:advanced_usage/command_line_client.adoc[The Command Line Client]
 * xref:appendices/index.adoc[Appendices]
 ** xref:appendices/building.adoc[Building the Desktop App]
 ** xref:appendices/architecture.adoc[History and Architecture]
