--- a/modules/ROOT/pages/advanced_usage/environment_variables.adoc
+++ b/modules/ROOT/pages/advanced_usage/environment_variables.adoc
@@ -150,4 +150,12 @@ Set to -1 to never require full local discovery.
 | `OWNCLOUD_OVERRIDE_SERVER_URL`
 | unset
 | Set to override a previously configured/branded server URL
+
+| `OCC_UPDATE_URL`
+| unset
+| This value can be set in the environment of the client to let the client choose a different update URL for testing purposes. 
+
+| `QT_LOGGING_RULES`
+| unset
+| This value can be used to control the log content, You can find examples here: troubleshooting.html#control-log-content and here: https://community.kde.org/Guidelines_and_HOWTOs/Debugging/Using_Error_Messages#Controlling_Messages
 |===
