--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -34,15 +34,16 @@ Windows::
 ** For xref:vfs.adoc[VFS support], Windows 10 versions 1709 or later.
 
 macOS::
-* macOS 10.12+
+* macOS 10.13+
 ** x86-64 or Apple M in Rosetta 2 emulation
 ** M1 native support planned for Q2 2023 - no issues in regard to performance or otherwise known at this time!
 
 Linux::
 * Debian 11 (x86-64)
-* Fedora 35 & 36 & 37 (x86-64)
-* openSUSE Leap 15.3 & 15.4 (x86-64)
-* Ubuntu 22.04 & 22.10 (x86-64)
+* Fedora 36 & 37 & 38 (x86-64)
+* openSUSE Leap 15.4 (x86-64)
+* Ubuntu 22.04 & 22.10 & 23.04 (x86-64)
+* **{appimage-wikipedia-url}[AppImage]** build of the ownCloud Desktop App is available to support more Linux platforms
 
 NOTE: For Linux distributions, we support, if technically feasible, the latest 2 versions per platform and the previous Ubuntu {ubuntu-lts-url}[LTS].
 
@@ -107,11 +108,11 @@ sudo apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com
 
 ==== AppImage
 
-Starting with Desktop App version 2.9, an {appimage-wikipedia-url}[AppImage] build of the ownCloud Desktop App is available to support more Linux platforms. You can download the AppImage at the {desktop-clients-url}[Linux section of the Download Desktop App] page.
+An {appimage-wikipedia-url}[AppImage] build of the ownCloud Desktop App is available to support more Linux platforms. You can download the AppImage at the {desktop-clients-url}[Linux section of the Download Desktop App] page.
 
 AppImage is an alternative way to use Linux applications -- instead of having multiple files in several places making up a package, the entire application is contained in a single file ending with an `.AppImage` suffix, including all necessary dependencies and libraries. ownCloud provides a single AppImage based on CentOS 7, which runs on all modern and most older Linux platforms.
 
-Known limitations for the 3.x AppImages::
+Known limitations for the 4.x AppImages::
 * For Ubuntu 22.04, Debian 11 and other very recent distributions, you need to install `libfuse2` as a prerequisite. For details see
 issue with `libfuse` on Ubuntu >=22.04 or Debian 11 {libfuse2-url}[Setting up FUSE 2.x alongside of FUSE 3.x on recent Ubuntu (>=22.04), Debian and their derivatives].
 
