--- a/modules/ROOT/pages/using.adoc
+++ b/modules/ROOT/pages/using.adoc
@@ -1,6 +1,7 @@
 = Using the Desktop App
 :toc: right
 :toclevels: 2
+:page-aliases: navigating.adoc
 :description: The ownCloud Desktop App remains in the background and is visible as an icon in the system tray (Windows, KDE), menu bar (macOS), or notification area (Linux).
 
 :oauth2-app-url: https://marketplace.owncloud.com/apps/oauth2
@@ -9,37 +10,39 @@
 
 {description}
 
-== Used App Icons
+== Icons
 
-image:navigating/icon.png[image-syncok]
+=== Used App Icons
+
+image:using/icon.png[image-syncok]
 
 The status indicator uses icons to indicate the current status of your synchronization. The green circle with the white checkmark tells you that your synchronization is current and you are connected to your ownCloud server.
 
-image:navigating/icon-syncing.png[image-syncing]
+image:using/icon-syncing.png[image-syncing]
 
 The blue icon with the white semi-circles means synchronization is in progress.
 
-image:navigating/icon-paused.png[image-paused]
+image:using/icon-paused.png[image-paused]
 
 The yellow icon with the parallel lines tells you your synchronization has been paused. (Most likely by you.)
 
-image:navigating/icon-offline.png[image-offline]
+image:using/icon-offline.png[image-offline]
 
 The gray icon with three white dots means your Desktop App has lost its connection with your ownCloud server.
 
-image:navigating/icon-information.png[image-information]
+image:using/icon-information.png[image-information]
 
 When you see a white circle with the letter "i" that is the informational icon, so you should click it to see what it has to tell you.
 
-image:navigating/icon-error.png[image-error]
+image:using/icon-error.png[image-error]
 
 The red circle with the white "x" indicates a configuration error, such as an incorrect login or server URL.
 
-== Systray Icon
+=== Systray Icon
 
 A right-click on the systray icon opens a menu for quick access to multiple operations.
 
-image::navigating/menu.png[systray, width=400,pdfwidth=60%]
+image::using/menu.png[systray, width=400,pdfwidth=60%]
 
 This menu provides the following options:
 
@@ -54,7 +57,73 @@ This menu provides the following options:
 
 A left-click on your systray icon opens the Desktop App to the account settings window.
 
-image::navigating/client6.png[image, width=600,pdfwidth=60%]
+image::using/client6.png[image, width=600,pdfwidth=60%]
+
+=== File Manager Overlay Icons
+
+The ownCloud Desktop App provides overlay icons, in addition to the normal file type icons, for your system file manager (Explorer on Windows, Finder on Mac and Nautilus on Linux) to indicate the sync status of your ownCloud files.
+
+The overlay icons are similar to the systray icons introduced above. They behave differently on files and directories according to sync status and errors.
+
+The overlay icon of an individual file indicates its current sync state. If the file is in sync with the server version, it displays a green checkmark.
+
+If the file is ignored from syncing, for example because it is on your exclude list, or because it is a symbolic link, it displays a warning icon.
+
+If there is a sync error, or the file is blacklisted, it displays an eye-catching red X. If the file is waiting to be synced, or is currently syncing, the overlay icon displays a blue cycling icon.
+
+When the Desktop App is offline, no icons are shown to reflect that the folder is currently out of sync and no changes are synced to the server.
+
+The overlay icon of a synced directory indicates the status of the files in the directory. If there are any sync errors, the directory is marked with a warning icon.
+
+If a directory includes ignored files that are marked with warning icons that does not change the status of the parent directories.
+
+== Accounts
+
+=== Connection Wizard
+
+The connection wizard is always shown when the Desktop App has been started and no synchronisation connection has been setup so far. It takes you step-by-step through configuration options and account setup.
+
+* First you need to enter the URL of your ownCloud instance.
++
+--
+Note that the URL given to you can be a different one than the final URL used by the Desktop App. This can be the case if a company has a generic setup URL that provides the Desktop App information about where to finally connect you. This mechanism is called https://en.wikipedia.org/wiki/WebFinger[WebFinger] and has the big benefit that one only needs to know the generic setup URL. The Desktop App tries to identify if webfinger is proveded via the given URL and acts accordingly based on the servers response. This all runs in the background but is explained here if you finally see a different URL being used than entered.
+
+image::using/client-1.png[form for entering ownCloud instance URL, width=500,pdfwidth=60%]
+--
+
+* Enter your ownCloud login on the next screen.
++
+--
+image::using/client-2.png[form for entering your ownCloud login, width=500,pdfwidth=60%]
+--
+
+* Select what and how to sync
++
+--
+On the _"Local Folder Option"_ screen you may sync all of your files on the ownCloud server, or select individual folders. The default local sync folder is `ownCloud`, in your home directory. You may change this as well.
+
+image::using/client-3.png[Select which remote folders to sync, and which local folder to store them in, width=500,pdfwidth=60%]
+--
+
+* Final step
++
+--
+When you have completed selecting your sync folders, click the _"Connect"_ button at the bottom right. The Desktop App will attempt to connect to your ownCloud server, and when it is successful you'll see two buttons:
+
+* One to connect to your ownCloud Web GUI.
+* One to open your local folder.
+
+It will also start synchronizing your files.
+--
+
+=== Adding New Accounts
+
+You may configure multiple ownCloud accounts in your Desktop App. Simply click the menu:Account[Add New] button on any account tab to add a new account, and then follow the account creation wizard. The new account will appear as a new tab in the settings dialog, where you can adjust its settings at any time. Use menu:Account[Remove] to delete accounts.
+
+[NOTE]
+====
+To use *Two-Factor Authentication* (2FA), ownCloud server must have the {oauth2-app-url}[OAuth2 app] installed, configured, and enabled. Please contact your ownCloud administrator for more details.
+====
 
 === Configuring ownCloud Account Settings
 
@@ -89,50 +158,21 @@ Stop all sync activity
 Enable virtual file support::
 Enable the virtual file support for an account
 
-image::navigating/client-7.png[The Overflow Menu, width=250,pdfwidth=60%]
-
-NOTE: ownCloud does not preserve the mtime (modification time) of directories, though it does update the mtimes on files. See https://github.com/owncloud/core/issues/7009:[Wrong folder date when syncing] for discussion of this.
-
-=== Adding New Accounts
-
-You may configure multiple ownCloud accounts in your Desktop App. Simply click the menu:Account[Add New] button on any account tab to add a new account, and then follow the account creation wizard. The new account will appear as a new tab in the settings dialog, where you can adjust its settings at any time. Use menu:Account[Remove] to delete accounts.
-
-[NOTE]
-====
-To use *Two-Factor Authentication* (2FA), ownCloud server must have the {oauth2-app-url}[OAuth2 app] installed, configured, and enabled. Please contact your ownCloud administrator for more details.
-====
-
-== File Manager Overlay Icons
-
-The ownCloud Desktop App provides overlay icons, in addition to the normal file type icons, for your system file manager (Explorer on Windows, Finder on Mac and Nautilus on Linux) to indicate the sync status of your ownCloud files.
-
-The overlay icons are similar to the systray icons introduced above. They behave differently on files and directories according to sync status and errors.
-
-The overlay icon of an individual file indicates its current sync state. If the file is in sync with the server version, it displays a green checkmark.
-
-If the file is ignored from syncing, for example because it is on your exclude list, or because it is a symbolic link, it displays a warning icon.
-
-If there is a sync error, or the file is blacklisted, it displays an eye-catching red X. If the file is waiting to be synced, or is currently syncing, the overlay icon displays a blue cycling icon.
-
-When the Desktop App is offline, no icons are shown to reflect that the folder is currently out of sync and no changes are synced to the server.
-
-The overlay icon of a synced directory indicates the status of the files in the directory. If there are any sync errors, the directory is marked with a warning icon.
-
-If a directory includes ignored files that are marked with warning icons that does not change the status of the parent directories.
+image::using/client-7.png[The Overflow Menu, width=250,pdfwidth=60%]
 
 == Sharing From Your Desktop
 
 The ownCloud Desktop App integrates with your file manager: Finder on Mac OS X, Explorer on Windows, and Nautilus on Linux. (Linux users must install the `owncloud-client-nautilus` plugin.) You can create share links, and share with internal ownCloud users the same way as in your ownCloud Web interface.
 
-image::navigating/mac-share.png[image, width=500,pdfwidth=60%]
+image::using/mac-share.png[image, width=500,pdfwidth=60%]
 
 Right-click your systray icon, hover over the account you want to use, and left-click  menu:Open folder["folder name"] to quickly enter your local ownCloud folder. Right-click the file or folder you want to share to expose the share dialog, and click menu:Share with ownCloud[].
 
-image::navigating/share-1.png[sharing_1, width=300,pdfwidth=70%]
+image::using/share-1.png[sharing_1, width=300,pdfwidth=70%]
 
 The share dialog has all the same options as your ownCloud Web interface.
 
-image::navigating/share-2.png[sharing_2, width=300,pdfwidth=60%]
+image::using/share-2.png[sharing_2, width=300,pdfwidth=60%]
 
 Use *Share with ownCloud* to see who you have shared with, and to modify their permissions, or to delete the share.
 
@@ -149,7 +189,7 @@ Displays local activities such as which local folders your files went into.
 Not Synced::
 Shows errors such as files not synced because of being excluded or any other failing status.
 
-image::navigating/client-8.png[not_synced, width=600,pdfwidth=60%]
+image::using/client-8.png[not_synced, width=600,pdfwidth=60%]
 
 In Windows, double-clicking an activity entry pointing to an existing file in tabs *Server Activities* or *Sync Protocol*, will open the folder containing the file and highlight it.
 
@@ -163,11 +203,11 @@ The desktop client will display notifications from your ownCloud server that req
 
 For example, when a user on a remote ownCloud creates a new Federated share for you, you can accept it from your desktop client. This also displays notifications sent to users by the ownCloud admin via the Announcements app.
 
-image::navigating/client12.png[server_notifications,width=600,pdfwidth=60%]
+image::using/client12.png[server_notifications,width=600,pdfwidth=60%]
 
 == Settings Window
 
-The Settings Window has configuration options such as
+The Settings Window has configuration options such as:
 
 === General Settings
 
@@ -185,12 +225,14 @@ NOTE: Hidden files are files starting with a dot like `.filename.txt`, but not f
 * Show crash reporter and the
 * Buttons for btn:[Edit Ignored Files] (xref:using-the-ignored-files-editor[see below]) and btn:[Log settings]
 
-=== Advanced - Approval of folder sync
+=== Advanced - Approval Synchronizing Folders
+
+This is only valid if not using the xref:vfs.adoc[VFS] feature.
 
 * Ask confirmation before downloading folders larger than [folder size]
 * Ask for confirmation before synchronizing external storages
 
-image::navigating/client-9.png[advanced, width=600,pdfwidth=60%]
+image::using/client-9.png[advanced approval, width=600,pdfwidth=60%]
 
 TIP: While you can select whether to show or hide the crash reporter, from the Settings Window, you can also configure whether to show or hide it from the xref:advanced_usage/configuration_file.adoc#section-general[general section of the configuration file] as well. Doing so can help with debugging on-startup-crashes.
 
@@ -214,7 +256,7 @@ The following options are available:
 When activated, the client limits the upload or download bandwidth to 25% of the currently available bandwidth for each operation. The available bandwidth is measured on the fly at the beginning of every operation for a very short period of time.
 * Limit to
 
-image::navigating/settings_network.png[Network Settings,width=600,pdfwidth=60%]
+image::using/settings_network.png[Network Settings,width=600,pdfwidth=60%]
 
 [NOTE]
 ====
@@ -225,9 +267,9 @@ Enabling this feature will affect all new transfers (next upload chunk or next d
 
 You might have some local files or directories that you do not want to backup and store on the server. To identify and exclude these files or directories, you can use the menu:Settings[Advanced > Ignored Files Editor]
 
-image::navigating/ignored_files_editor.png[Ingnored Files Editor,width=350,pdfwidth=60%]
+image::using/ignored_files_editor.png[Ingnored Files Editor,width=350,pdfwidth=60%]
 
-For your convenience, the editor is pre-populated with a default list of typical ignore patterns. These patterns are contained in a system file. (typically `sync-exclude.lst`) located in the ownCloud Client application directory. You cannot modify these pre-populated patterns directly from the editor. However, if necessary, you can hover over any pattern in the list to show the path and filename associated with that pattern, locate the file, and edit the `sync-exclude.lst` file.
+For your convenience, the editor is pre-populated with a default list of typical ignore patterns. These patterns are contained in a system file. (typically `sync-exclude.lst`) located in the ownCloud Desktop App directory. You cannot modify these pre-populated patterns directly from the editor. However, if necessary, you can hover over any pattern in the list to show the path and filename associated with that pattern, locate the file, and edit the `sync-exclude.lst` file.
 
 NOTE: Modifying the global exclude definition file might render the client unusable or result in undesired behavior.
 
@@ -252,7 +294,7 @@ For more detailed information see the xref:architecture.adoc#ignored-files[Ignor
 
 When removing a synchronization connection, all synchronized data will stay locally and not get deleted. To remove a sync relationship, change to the account and select the synchronization relationship that should get removed. When clicking the btn:[...] (three dots) icon, the following window appears:
 
-image::navigating/remove_sync_connection.png[Removing a Sync Relationship,width=250,pdfwidth=60%]
+image::using/remove_sync_connection.png[Removing a Sync Relationship,width=250,pdfwidth=60%]
 
 Select btn:[Remove folder sync connection] to remove it. If you also want to delete the related data, go to the folder and delete it.
 
